# 2012-4-03

- Fixed issue with vitals popover staying on the screen after the app goes to background
- Fixed issue with tools popover staying on screen when selecting about or navigation segmented control
- Internal refactoring for custom view handling

# 2012-4-02

This build removes any synthetic data from the summary screen. All data being shown is parsed from PDS generated JSON.

- Removed mock message in footer
- Added tools button to nav bar
- Removed privacy demo
- Moved feedback button to top of about
- Added build date to about view
- Moved C32 HTML to tools
- Removed mock data
- Added tables for vitals when you tap on them
- Tapping DOB changes to age. If < 6 months it shows weeks, if < 2 years, show months, else show years

# 2012-3-30

- Fixed bugs in passcode handling
- Code and file cleanup

# 2012-3-28

- Finished passcode reset via security questions when a user forgets their PIN
- Fixed crash when you try to change security questions and they don't already exist
- Security questions 'Done' button is only enabled when the questions and answers exist
- Turned off autocomplete and autocapitalization on the security answers fields
- Updated timeline with overlapping dots fixes

# 2012-3-26

- Fixed usability issues with PIN code and security questions
- Last thing remaining is the PIN code reset

# 2012-3-23

- Security questions to assist in passcode reset
- Rewritten passcode view to support security question workflow
- There are some minor usability issues with this release but nothing that will keep the app from running properly

# 2012-3-6

- Minor refactoring of vital views
- Import new patient JSON files
- Show medications sorted with most recent on top

# 2012-02-29

- Fixed medications to be formatted properly (will show max of 8)
- Refactored vitals
- Sparklines are now generated from real data
- BMI implemented with normal check and ranges

# 2012-02-27

- Doctors view now setup to dynamically load providers